# Menshun

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  README.md  UBUNTU_DEPLOYMENT.md  docker-compose.prod.yml  docker-compose.yml  github-setup.md  install.sh  menshunprd.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_issue.md
.github/workflows/: ci.yml  security.yml
backend/: Dockerfile  alembic.ini  migration_strategy.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: setup.py
backend/app/core/: __init__.py  config.py  database.py  logging.py
backend/app/models/: __init__.py  audit.py  base.py  configuration.py  credential.py  directory_role.py  role_assignment.py  service_identity.py  session.py  user.py
backend/app/scripts/: __init__.py  seed_roles.py
backend/app/services/: configuration.py
backend/scripts/: health_check.py  start.sh  wait_for_db.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py
backend/tests/unit/: test_models.py
deploy/azure/: container-apps.yaml
deploy/kubernetes/: backend-deployment.yaml  configmap.yaml  frontend-deployment.yaml  namespace.yaml  secrets.yaml
deploy/production/: .env.example  docker-compose.prod.yml
frontend/: .env.example  .eslintrc.json  .prettierignore  .prettierrc.json  Dockerfile  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  setupTests.ts  vite-env.d.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/Layout/: Header.tsx  Sidebar.tsx  index.tsx
frontend/src/components/Setup/: SetupWizard.tsx
frontend/src/components/Setup/steps/: AzureSetupStep.tsx  ComplianceStep.tsx  NotificationsStep.tsx  OrganizationStep.tsx  ReviewStep.tsx  SecurityStep.tsx  WelcomeStep.tsx
frontend/src/components/ui/: LoadingSpinner.tsx
frontend/src/config/: api.ts  auth.ts
frontend/src/pages/: DashboardPage.tsx  NotFoundPage.tsx
frontend/src/pages/audit/: AuditLogsPage.tsx
frontend/src/pages/auth/: LoginPage.tsx
frontend/src/pages/credentials/: CredentialsPage.tsx
frontend/src/pages/role-assignments/: RoleAssignmentsPage.tsx
frontend/src/pages/service-identities/: ServiceIdentitiesPage.tsx
frontend/src/pages/settings/: SettingsPage.tsx
frontend/src/pages/users/: UsersPage.tsx
frontend/src/styles/: globals.css
frontend/src/types/: index.ts
